--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "demo-app",
+  "name": "schoolapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --config webpack.config.js --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^2.1.0",
+    "css-loader": "^2.0.2",
     "html-loader": "^0.5.5",
-    "webpack": "^4.28.3",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
     "angular": "^1.7.5",
+    "angular-route": "^1.7.5",
     "angular-ui-router": "^1.0.20",
-    "bootstrap": "^4.2.1"
+    "bootstrap": "^4.2.1",
+    "cors": "^2.8.5",
+    "express": "^4.16.4"
   }
 }
